# ROSinterview

install/: local_setup.sh  setup.sh
install/autoronto_interview/lib/autoronto_interview/: solution  test_publisher
install/autoronto_interview/share/ament_index/resource_index/parent_prefix_path/: autoronto_interview
install/autoronto_interview/share/autoronto_interview/: package.sh
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
install/turtlesim/share/turtlesim/: package.sh
log/: latest_build
src/autoronto_interview/: CMakeLists.txt
src/autoronto_interview/src/: solution.cpp
